--- a/package.json
+++ b/package.json
@@ -8,17 +8,12 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "docker:dev": "docker-compose -f docker-compose.yml -f docker-compose.dev.yml up --force-recreate --build",
+    "docker:build": "docker-compose -f docker-compose.yml up --force-recreate --build"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
